# pyrace

./: Config.py  LICENSE.txt  Makefile  README.md  default_config.py  docker-compose.yml  gui.py  main.py  pyproject.toml  renovate.json  requirement.txt  server.py
.github/workflows/: python-app.yml
pyrace/: base.py  client_thead.py  config.py  gui.py
pyrace/gateway/: console.py  gateway.py  parseQuery.py  test_gateway.py  web.py
pyrace/shared/: config.py  encryption.py  logging.py  test_encryption.py
services/sslProxy/: Dockerfile
tests/: test_config.py  test_encryption.py  test_gateway.py
web/authlogin/: apps.py  models.py  urls.py  views.py
web/authlogin/migrations/: 0001_initial.py  0002_alter_user_customerid.py  0003_remove_user_address_remove_user_city_and_more.py
web/web/: settings.py  urls.py
