[tool.poetry]
name = "pyrace"
version = "0.1.0"
description = ""
authors = ["Molly Draven <drazi@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography= "42.0.8"
sentry-sdk = "2.7.1"
curtsies = "^0.4.2"
django = "^5.0.7"
psycopg = "^3.1.19"
twisted = {version = "^24.3.0", extras = ["tls"]}


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
