[tool.pdm]
[tool.pdm.dev-dependencies]
test = ["pytest<9.0.0,>=8.2.1", "pytest-cov<6.0.0,>=5.0.0"]
dev = [
    "flake8>=7.1.1",
    "black>=24.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "coverage>=7.6.1",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [{ name = "Molly Draven", email = "drazi@duck.com" }]
requires-python = "<4.0,>=3.11"
dependencies = [
    "cryptography==43.0.1",
    "sentry-sdk==2.15.0",
    "curtsies<1.0.0,>=0.4.2",
    "django<6.0.0,>=5.0.6",
]
name = "pyrace"
version = "0.1.0"
description = ""
readme = "README.md"
license = { file = "LICENSE.txt" }

[tool.black]
line-length = 127